apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_one_subgraph_cost_are_accepted@custom_costs.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 121.0,
  "apollo::demand_control::actual_cost_by_subgraph": {
    "subgraphWithCost": 121.0
  },
  "apollo::demand_control::estimated_cost": 127.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "subgraphWithCost": 121.0,
    "subgraphWithListSize": 6.0
  },
  "apollo::demand_control::result": "COST_OK",
  "apollo::demand_control::result_by_subgraph": {
    "subgraphWithCost": "COST_OK",
    "subgraphWithListSize": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE"
  },
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "subgraphWithCost": 1
  },
  "body": {
    "data": {
      "argWithCost": 30,
      "enumWithCost": "A",
      "fieldWithCost": 2,
      "fieldWithDynamicListSize": null,
      "fieldWithListSize": null,
      "inputWithCost": 5,
      "objectWithCost": {
        "id": "9"
      },
      "scalarWithCost": 6172364
    },
    "errors": [
      {
        "extensions": {
          "code": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.subgraph": "subgraphWithListSize",
          "cost.subgraph.estimated": 6.0,
          "cost.subgraph.max": 1.0,
          "service": "subgraphWithListSize"
        },
        "message": "query estimated cost 6 exceeded configured maximum 1 for subgraph subgraphWithListSize",
        "path": []
      }
    ]
  }
}
