apollo-router/tests/integration/snapshots/integration_tests__integration__demand_control__requests_exceeding_one_subgraph_cost_are_accepted@federated_ships_required.snap
---
source: apollo-router/tests/integration/demand_control.rs
expression: parse_result_for_snapshot(response).await
---
{
  "apollo::demand_control::actual_cost": 6.0,
  "apollo::demand_control::actual_cost_by_subgraph": {
    "vehicles": 6.0
  },
  "apollo::demand_control::estimated_cost": 140.0,
  "apollo::demand_control::estimated_cost_by_subgraph": {
    "users": 110.0,
    "vehicles": 30.0
  },
  "apollo::demand_control::result": "COST_OK",
  "apollo::demand_control::result_by_subgraph": {
    "users": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
    "vehicles": "COST_OK"
  },
  "apollo::demand_control::strategy": "static_estimated",
  "apollo::experimental_mock_subgraphs::subgraph_call_count": {
    "vehicles": 1
  },
  "body": {
    "data": {
      "ships": [
        {
          "name": "Ship1",
          "registrationFee": null
        },
        {
          "name": "Ship2",
          "registrationFee": null
        },
        {
          "name": "Ship3",
          "registrationFee": null
        }
      ]
    },
    "errors": [
      {
        "extensions": {
          "code": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.subgraph": "users",
          "cost.subgraph.estimated": 110.0,
          "cost.subgraph.max": 1.0,
          "service": "users"
        },
        "message": "query estimated cost 110 exceeded configured maximum 1 for subgraph users",
        "path": [
          "ships",
          0
        ]
      },
      {
        "extensions": {
          "code": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.subgraph": "users",
          "cost.subgraph.estimated": 110.0,
          "cost.subgraph.max": 1.0,
          "service": "users"
        },
        "message": "query estimated cost 110 exceeded configured maximum 1 for subgraph users",
        "path": [
          "ships",
          1
        ]
      },
      {
        "extensions": {
          "code": "SUBGRAPH_COST_ESTIMATED_TOO_EXPENSIVE",
          "cost.subgraph": "users",
          "cost.subgraph.estimated": 110.0,
          "cost.subgraph.max": 1.0,
          "service": "users"
        },
        "message": "query estimated cost 110 exceeded configured maximum 1 for subgraph users",
        "path": [
          "ships",
          2
        ]
      },
      {
        "extensions": {
          "code": "UNSATISFIED_FETCH_CONDITION"
        },
        "message": "Could not fetch field",
        "path": [
          "ships",
          0,
          "registrationFee"
        ]
      },
      {
        "extensions": {
          "code": "UNSATISFIED_FETCH_CONDITION"
        },
        "message": "Could not fetch field",
        "path": [
          "ships",
          1,
          "registrationFee"
        ]
      },
      {
        "extensions": {
          "code": "UNSATISFIED_FETCH_CONDITION"
        },
        "message": "Could not fetch field",
        "path": [
          "ships",
          2,
          "registrationFee"
        ]
      }
    ]
  }
}
